--- a/src/app/styles/about.css
+++ b/src/app/styles/about.css
@@ -1,12 +1,13 @@
 .swiper {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #ebe8e8;
   color: rgb(0, 0, 0);
   z-index: 0;
 }
 .container-about{
     background-color: rgb(64, 54, 54);
+    min-height: 100vh;
 }
 .swiper-slide {
   display: flex;
@@ -24,9 +25,10 @@
 .swiper-wrapper{
     margin-top: 105px;
 }
-.swiper-slide img {
-  max-height: 60%; /* Adjust based on your needs */
-  width: 100%;
+.slider-contenu img {
+   /* Adjust based on your needs */
+  width: 80%;
+  max-height: 40vh;
   border-radius: 8px; /* Optional: for rounded corners */
   object-fit: cover;
   margin:  auto;
@@ -37,6 +39,7 @@
   max-width: 80%;
   margin: 25px auto;
   padding: 25px;
+  height: 100%;
 }
 
 /* Adjust the size and color of pagination, navigation buttons, and scrollbar here */
