--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -26,3 +26,6 @@
   ::-webkit-scrollbar-thumb:hover {
     background-color: #6d6c6a; /* Couleur d'arrière-plan du pouce en survol */
   }
+  h1,h2{
+    color: #D32F2F;
+  }
