--- a/src/app/styles/pneus.css
+++ b/src/app/styles/pneus.css
@@ -107,6 +107,13 @@
     margin-top: 10px;
   }
 
+  @media (max-width: 768px) {
+    
+    .others-partners{
+        width: 100%;
+    }
+  }
+
 
 
 
