--- a/src/app/styles/pneus.css
+++ b/src/app/styles/pneus.css
@@ -112,6 +112,16 @@
     .others-partners{
         width: 100%;
     }
+    .others-partners p{
+        width: 80%;
+    }
+    .partner-title{
+      width: 90%;
+      margin: 0 auto ;
+      margin-top: 85px;
+      margin-bottom: 25px;
+      font-size: 1.7rem;
+    }
   }
 
 
