--- a/src/app/styles/button.css
+++ b/src/app/styles/button.css
@@ -1,14 +1,17 @@
 /* styles/BackToTopButton.css */
 .back-to-top-button {
     position: fixed;
-    bottom: 20px;
+    bottom: 30px;
     right: 20px;
     z-index: 1000;
+    width: 50px;
+    height: 50px;
+    font-weight: bolder;
     cursor: pointer;
     background-color: #5f0606; /* Example background color */
     color: #fff; /* Example text color */
     border: none;
     padding: 15px;
-    border-radius: 5px;
+    border-radius: 50%;
   }
   
