pages jantes ,responsives ,ajustements et traduction

--- a/src/app/styles/navbar.css
+++ b/src/app/styles/navbar.css
@@ -98,9 +98,10 @@ nav ul > li span::after {
     cursor: pointer;
     color: white;
     font-size: 2rem; /* Adjust size as needed */
-    position: absolute;
+    position: fixed;
     top: 10px;
     right: 20px;
+    z-index: 1000;
   }
   
   /* Styles for sidebar */
@@ -190,7 +191,7 @@ nav.sidebar-visible ul {
 
 /* Burger Icon Styling */
 .burger-icon {
-    position: absolute;
+    position: fixed;
     top: 15px; /* Adjust as needed */
     right: 20px; /* Adjust as needed */
     color: #ae1212;
@@ -213,9 +214,7 @@ nav.sidebar-visible ul {
        flex-direction: column;
             overflow: hidden; /* Prevent nav items from showing outside during transition */
         
-        
     }
-
     /* Transform sidebar for visibility */
     nav.sidebar-visible {
         transform: translateX(0);
