--- a/src/app/styles/pneus.css
+++ b/src/app/styles/pneus.css
@@ -4,7 +4,9 @@
     color: #333;
     margin-bottom: 2rem;
 }
-
+.tires-container{
+  
+}
 .partners-list {
     display: flex;
     flex-wrap: wrap;
