--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -37,33 +37,64 @@
 }
 
 .presentation{
-    width: 80%;
-    margin: 35px auto;
+    width: 100%;
+    margin:  auto;
     min-height: 85vh;
     display: flex;
+    flex-direction: column;
     gap: 45px;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background-color: #000000;
+    background-image: url(../../../public/images/garage-back.png);
     color: white;
-    visibility: hidden;
-    
+    visibility: hidden; 
+}
+.presentation::before{
+    content: ''; /* Required for pseudo-elements */
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url('../../../public/images/garage-back.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    filter: brightness(0.5);
+    z-index: 0; /* Ensure the background is behind content */
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url('../../../public/images/garage-back.png');
+    z-index: -1;
 }
 .presentation-text{
-    width: 40%;
+    width: 50%;
     display: flex;
     gap: 55px;
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.09);
+    background-color: rgba(0, 0, 0, 0.09);
     border-radius: 10px;
     color: rgb(255, 255, 255);
+
+}
+.presentation-title h2{
+    font-size: 2.3rem;
+    font-weight: bold;
+    width: 100%;
+    color: white;
+}
+h2 span{
+    color: #900a0a;
 }
 .presentation-image{
-    width: 50%;
+    width: auto;
+    height: 35vh;
+}
+.presentation-image img{
+    width: 100%;
+    height: 100%;
 }
 .horaires-background {
     width: 100%;
