--- a/src/app/styles/leasing.css
+++ b/src/app/styles/leasing.css
@@ -1,168 +1,7 @@
 .container-leasing {
   padding: 20px;
   text-align: center;
-  --sz: 4px; /*** size ***/
-  --sp: 5s; /*** speed ***/
-  --b1: #211e1e; /*** color ***/
-  --b2: #1c1b18; /*** color ***/
-  --b3: #0c0b0a; /*** color ***/
-  --b4: #0c0b0ae0; /*** color ***/
-  --c1: #010000; /*** color ***/
-  --ts: 50% / calc(var(--sz) * 17.5) calc(var(--sz) * 29.5);
-  background:
-		/* black shadows */ radial-gradient(
-        circle at 50% 50%,
-        var(--b4) calc(var(--sz) * 1),
-        #fff0 calc(var(--sz) * 8)
-      )
-      var(--ts),
-    radial-gradient(
-        circle at 0% 0%,
-        var(--b4) calc(var(--sz) * 1),
-        #fff0 calc(var(--sz) * 8)
-      )
-      var(--ts),
-    radial-gradient(
-        circle at 0% 100%,
-        var(--b4) calc(var(--sz) * 1),
-        #fff0 calc(var(--sz) * 8)
-      )
-      var(--ts),
-    radial-gradient(
-        circle at 100% 0%,
-        var(--b4) calc(var(--sz) * 1),
-        #fff0 calc(var(--sz) * 8)
-      )
-      var(--ts),
-    radial-gradient(
-        circle at 100% 100%,
-        var(--b4) calc(var(--sz) * 1),
-        #fff0 calc(var(--sz) * 8)
-      )
-      var(--ts),
-    /* border bottom */
-      conic-gradient(
-        from 90deg at 97.5% 67%,
-        var(--c1) 0 87.5deg,
-        #fff0 88deg 100%
-      )
-      var(--ts),
-    /*repeated*/
-      conic-gradient(
-        from 90deg at 97.5% 67%,
-        var(--c1) 0 87.5deg,
-        #fff0 88deg 100%
-      )
-      var(--ts),
-    conic-gradient(
-        from 182.5deg at 2.5% 67%,
-        #fff0 0 0deg,
-        var(--c1) 0.5deg 90deg,
-        #fff0 0 100%
-      )
-      var(--ts),
-    /*repeated*/
-      conic-gradient(
-        from 182.5deg at 2.5% 67%,
-        #fff0 0 0deg,
-        var(--c1) 0.5deg 90deg,
-        #fff0 0 100%
-      )
-      var(--ts),
-    /* border top */
-      conic-gradient(
-        from 270deg at 2.5% 33%,
-        var(--c1) 0 87.5deg,
-        #fff0 88deg 100%
-      )
-      var(--ts),
-    /*repeated*/
-      conic-gradient(
-        from 270deg at 2.5% 33%,
-        var(--c1) 0 87.5deg,
-        #fff0 88deg 100%
-      )
-      var(--ts),
-    conic-gradient(
-        from 2.5deg at 97.5% 33%,
-        #fff0 0 0deg,
-        var(--c1) 0.5deg 90deg,
-        #fff0 0 100%
-      )
-      var(--ts),
-    /*repeated*/
-      conic-gradient(
-        from 2.5deg at 97.5% 33%,
-        #fff0 0 0deg,
-        var(--c1) 0.5deg 90deg,
-        #fff0 0 100%
-      )
-      var(--ts),
-    /* bottom */
-      conic-gradient(
-        from 116.5deg at 50% 85.5%,
-        var(--b1) 0 127deg,
-        #fff0 0 100%
-      )
-      var(--ts),
-    /*repeated*/
-      conic-gradient(
-        from 116.5deg at 50% 85.5%,
-        var(--b1) 0 127deg,
-        #fff0 0 100%
-      )
-      var(--ts),
-    /*repeated*/
-      conic-gradient(
-        from 116.5deg at 50% 85.5%,
-        var(--b1) 0 127deg,
-        #fff0 0 100%
-      )
-      var(--ts),
-    conic-gradient(from 120deg at 50% 83%, var(--c1) 0 120deg, #fff0 0 100%)
-      var(--ts),
-    /* top */
-      conic-gradient(
-        from -63.5deg at 50% 14.5%,
-        var(--b1) 0 127deg,
-        #fff0 0 100%
-      )
-      var(--ts),
-    /*repeated*/
-      conic-gradient(
-        from -63.5deg at 50% 14.5%,
-        var(--b1) 0 127deg,
-        #fff0 0 100%
-      )
-      var(--ts),
-    /*repeated*/
-      conic-gradient(
-        from -63.5deg at 50% 14.5%,
-        var(--b1) 0 127deg,
-        #fff0 0 100%
-      )
-      var(--ts),
-    conic-gradient(from -60deg at 50% 17%, var(--c1) 0 120deg, #fff0 0 100%)
-      var(--ts),
-    /* central gradient */
-      conic-gradient(
-        from 0deg at 50% 50%,
-        #fff0 0 2deg,
-        var(--b2) 2.5deg 57.5deg,
-        #fff0 58deg 62.5deg,
-        var(--b1) 63deg 117.5deg,
-        #fff0 118deg 122.5deg,
-        var(--b3) 123deg 177.5deg,
-        #fff0 178deg 182deg,
-        var(--b2) 182.5deg 237.5deg,
-        #fff0 0 242.5deg,
-        var(--b1) 243deg 297.5deg,
-        #fff0 298deg 302.5deg,
-        var(--b3) 303deg 357.5deg,
-        #fff0 358deg 360deg
-      )
-      var(--ts),
-    /* bg */ var(--c1);
+
   animation: colors var(--sp) linear 0s infinite;
 }
 
@@ -175,7 +14,7 @@
 }
 
 .partner {
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Adds subtle shadow */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.53); /* Adds subtle shadow */
   border-radius: 10px; /* Rounded corners for a modern look */
   padding: 20px;
   width: 25%;
@@ -189,7 +28,7 @@
   position: relative;
 }
 .leasing-title {
-  color: #cccaca; /* Use site’s accent color */
+  color: #900a0a; /* Use site’s accent color */
   font-size: 1.7rem;
   margin-bottom: 30px;
   text-align: center;
@@ -213,11 +52,11 @@
   transition: transform 0.3s ease;
 }
 .partner-official{
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Adds subtle shadow */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.42); /* Adds subtle shadow */
   border-radius: 10px; /* Rounded corners for a modern look */
   padding: 20px;
   width: 35%;
-  background-color: #ffffff9e; /* Background for contrast */
+  background-color: #ffffffa0; /* Background for contrast */
   transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions for interaction */
   display: flex;
   flex-direction: column;
@@ -281,7 +120,7 @@
 }
 .partner:hover {
   transform: translateY(-5px); /* Slight raise effect on hover */
-  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2); /* Enhanced shadow on hover for depth */
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0); /* Enhanced shadow on hover for depth */
 }
 
 @media (max-width: 768px) {
