--- a/src/app/styles/pneus.css
+++ b/src/app/styles/pneus.css
@@ -127,6 +127,17 @@
       margin-bottom: 25px;
       font-size: 1.7rem;
     }
+    .cardOverlay {
+      bottom: 0;
+      background-color: #D32F2F;
+    }
+    .partnerLogo{
+      filter: grayscale(0);
+    }
+    .partnerCard{
+      height: 25vh;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
   }
 
 
