responsive , refont footer, adjustments

--- a/src/app/styles/about.css
+++ b/src/app/styles/about.css
@@ -60,3 +60,15 @@
 .swiper-scrollbar-drag {
   background: #ff0000;
 }
+.wait{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 88vh;
+}
+.wait a {
+
+  font-size: 1.5rem;
+
+}
