--- a/src/app/styles/navbar.css
+++ b/src/app/styles/navbar.css
@@ -124,15 +124,14 @@ nav ul > li span::after {
         left: 93%;
     }
 }
-@media(max-width:1200px){
-    nav ul {
-        width: 75%;
-    }
-    nav ul li{
-        font-size: 0.7rem;
-    }
+@media(max-width:1600px){
+
+
     nav h2{
         font-size: 1rem;
+    }
+    nav ul li a{
+        font-size: 0.9rem;
     }
 }
 /* Hide navigation links and buttons initially in mobile view */
