--- a/src/app/styles/footer.css
+++ b/src/app/styles/footer.css
@@ -99,7 +99,7 @@ footer {
         align-items: center;
         gap: 20px;
         width: 50%;
-        margin-top: 20px;
+        margin-top: 30px !important;
     }
     .text-bosmans{
         width: 150px;
@@ -114,6 +114,9 @@ footer {
         gap: 20px;
         margin-top: 20px;
         flex-direction: column;
+    }
+    .infos-contact p{
+        color: white;
     }
 
 }
