test phone number on mobile

--- a/src/app/styles/footer.css
+++ b/src/app/styles/footer.css
@@ -116,7 +116,7 @@ footer {
         flex-direction: column;
     }
     .infos-contact p{
-        color: white;
+        color: white !important;
     }
 
 }
