--- a/src/app/styles/navbar.css
+++ b/src/app/styles/navbar.css
@@ -114,6 +114,9 @@ nav ul > li span::after {
     nav ul li a{
         font-size: 0.8rem;
     }
+    nav ul li{
+        font-size: 0.8rem;
+    }
     nav ul{
         width: 75%;
         justify-content: center;
@@ -132,6 +135,9 @@ nav ul > li span::after {
         font-size: 1rem;
     }
     nav ul li a{
+        font-size: 0.9rem;
+    }
+    nav ul li{
         font-size: 0.9rem;
     }
     nav ul{
