--- a/src/app/styles/leasing.css
+++ b/src/app/styles/leasing.css
@@ -1,7 +1,5 @@
 .container-leasing {
   padding: 20px;
-  text-align: center;
-
   animation: colors var(--sp) linear 0s infinite;
 }
 
@@ -9,15 +7,13 @@
 .partners-flex {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; /* Adjust this as needed */
-  gap: 20px; /* Provides spacing between items */
+  width: 65%;
+  gap: 0.5px;
+  margin: 30px auto;
 }
 
 .partner {
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.53); /* Adds subtle shadow */
-  border-radius: 10px; /* Rounded corners for a modern look */
-  padding: 20px;
-  width: 25%;
+  width: 25vh;
   height: 25vh;
   background-color: #ffffff9e; /* Background for contrast */
   transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions for interaction */
@@ -26,6 +22,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  border: 1px solid rgb(192, 192, 192);
 }
 .leasing-title {
   color: #900a0a; /* Use site’s accent color */
@@ -34,6 +31,23 @@
   text-align: center;
   text-transform: uppercase;
 }
+.leasing-title-partner{
+  color: #900a0a; /* Use site’s accent color */
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  border-bottom: 2px solid #900a0a;
+  width: 25%;
+  z-index: 3;
+}
+.cont-title{
+  position: relative;
+  width: 65%;
+  margin: 0 auto;
+  margin-bottom: 45px;
+  z-index: -1;
+}
+/* After title to complete the border of leasing-title-hover the whole div  */
+
 .official-partner {
   margin-bottom: 40px; /* Space between official and other partners */
   display: flex;
@@ -55,7 +69,7 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.42); /* Adds subtle shadow */
   border-radius: 10px; /* Rounded corners for a modern look */
   padding: 20px;
-  width: 35%;
+  width: 25%;
   background-color: #ffffffa0; /* Background for contrast */
   transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions for interaction */
   display: flex;
